--- a/src/dev-pug/head.pug
+++ b/src/dev-pug/head.pug
@@ -24,7 +24,7 @@ head
   // seo //
   meta(name='description' content='SEO')
   meta(name='keywords' content='SEO')
-  meta(name='Author' content='Autor')
+  meta(name='Author' content='Author')
   meta(name='Copyright' content='Copyright')
   meta(name='Address' content='Address')
 
